Переписан скрипт парсинга, исправлена ошибка добавления клонов продуктов
Signed-off-by: Alisher Baisaganov <baisaganov99@gmail.com>